completed user defined tags

--- a/prototypes/user_tags.ipynb
+++ b/prototypes/user_tags.ipynb
@@ -2,30 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from data_loader import load_posts\n",
-    "from gpt import user_tag, batch_user_tag, tag"
+    "from gpt import batch_user_tag, tag"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "posts = load_posts()\n",
-    "posts = posts[:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "titles = [post.title for post in posts]\n",
     "contents = [post.content for post in posts]"
    ]
@@ -53,15 +44,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "titles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "y = await batch_user_tag(titles, contents, target_tags)"
    ]
   },
@@ -72,15 +54,6 @@
    "outputs": [],
    "source": [
     "tag(posts[0].title, posts[0].content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y"
    ]
   }
  ],
